--- a/style/style.css
+++ b/style/style.css
@@ -27,22 +27,17 @@ html{
 
 @media screen and (min-width: 1141px) {
 
-
-    /*CABECALHO*/
+/*CABECALHO*/
 
     body{
         font-size: 16px;
         max-width: 1140px;
-        
-        
-        
     }
 
     .container{
         height: 100vh;
         background-color: #f5f5f5;
         position: relative;
-        
     }
 
 
@@ -54,8 +49,8 @@ html{
     }
 
     .hamburguer{
-        width: 2rem;
-        height: 2rem;
+        width: 1.5rem;
+        height: 1.5rem;
         position: fixed;
         z-index: 100; /* eixo x coloca o item a frente dos demais*/
         right: auto;
@@ -78,11 +73,10 @@ html{
         background-color: #fff;
         box-shadow: 0.1rem 0.1rem black;
         transition: transform .3s;
-    
     }
 
     .show-menu #line1{
-        transform: rotate(45deg) translate(.1rem, .5rem); /*faz a rotação da linha e o posicionamento*/
+        transform: rotate(45deg) translate(.6rem); /*faz a rotação da linha e o posicionamento*/
     }
 
     .show-menu #line2{
@@ -91,7 +85,7 @@ html{
     }
 
     .show-menu #line3{
-        transform: rotate(-45deg) translate(.1rem, -.7rem);
+        transform: rotate(-45deg) translate(.3rem);
     }
 
     .hamburguer span{
@@ -120,7 +114,6 @@ html{
     
     .show-menu .hamburguer:hover span{
         opacity: 1;
-    
     }
     
     .img-wrapper{
@@ -152,7 +145,6 @@ html{
         position: absolute;
         top: 5%;
         left: 5%;
-    
     }
 
     .banner h1{
@@ -164,7 +156,6 @@ html{
         margin-bottom: .5rem;
         opacity: 0;
         animation: moveBanner 1s 0.5s forwards;
-        
     }
     
     .banner p{
@@ -225,7 +216,6 @@ html{
     
     .menu-link:hover{
         color: #6a3093;
-    
     }
     
     .social-media{
@@ -242,6 +232,648 @@ html{
         height: 3rem;
         width: 3rem;
         font-size: 2.5rem; /*o icone tem tamanho de fonte neste caso por isso faz seu ajuste aqui*/
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        transition: background-color .5s;
+    }
+    
+    .social-media i:hover{
+        background-color: #a044ff;
+    }
+
+    .confirmacao-envio{
+        height: 60%;        
+    }
+
+
+    .confirmacao-envio-header{
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .confirmacao-envio-header h1{
+        font-family: var(--font-primary);
+        font-size: 2rem;
+        text-shadow: .1rem .1rem .2rem #0000008f;
+    }
+
+    .confirmacao-envio-header p {
+        font-family: var(--font-secundary);
+        font-size: 1.6rem;
+        padding-top: 1rem;
+    }
+
+    /*RODAPÉ*/
+
+    footer{
+        width: 100%;
+        height: 12rem;
+        background-color: #dadada;
+        display: flex;
+        justify-content: center;
+        align-items: center;        
+    }
+
+    .footer-logo{
+        width: 12rem;
+        padding-right: 1rem;
+        padding-left: 1rem;
+        position: relative;
+    }
+
+    .footer-logo img{
+        object-fit: cover;
+        width: 80%;
+    }
+
+    .footer-content{
+        width: 100%;        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    
+    .footer-copyright{
+        padding-left: 2rem;
+        padding-right: 2rem;
+        text-align: center;
+    }
+
+    .footer-copyright p{
+        font-family: var(--font-primary);
+        color: #000000;        
+        font-size: 1rem;
+    }
+
+    .footer-social{
+        height: 7rem;
+        display: flex;
+        align-items: center;
+    }
+
+    .footer-social a{
+        height: 100%;
+        margin: 0 2rem;
+        color: #000000;
+        font-size: 2rem;
+    }
+
+    .footer-social ul{
+        display: flex;
+    }
+
+    .footer-social a:hover{
+        color: #6a3093;
+    }
+
+    /*LINK TOPO*/    
+
+    #link-topo{
+        position: fixed;
+        padding: .3rem;
+        bottom: 1.5rem;        
+        margin-left: 66rem;
+        background: #642B73;
+        background: -webkit-linear-gradient(to right, #C6426E, #642B73);
+        background: linear-gradient(to right, #C6426E, #642B73);
+        display: flex;
+        justify-content: center;        
+        color: white;
+        font-size: 2.5rem;
+        border-radius: .3rem;
+        box-shadow: 0 0.1rem 0.6rem #000000;
+        z-index: 101;
+    }
+
+}
+
+
+@media screen and (min-width: 701px) and (max-width: 1140px) {
+
+    /*CABECALHO*/
+
+    body{
+        font-size: 16px;
+        max-width: 1140px;
+    }
+
+    .container{
+        height: 100vh;
+        background-color: #f5f5f5;
+        position: relative;
+    }
+
+    header{
+        width: 100%;
+        height: 12rem; /* dimensionar para que fique na altura da tela, independente do dispositivo*/
+        overflow: hidden;
+        position: relative; /* para se usar um baner na posição absoluta precisamos informar que o header e relativo*/
+    }
+
+    .hamburguer{
+        width: 2rem;
+        height: 2rem;
+        position: fixed;
+        z-index: 100; /* eixo x coloca o item a frente dos demais*/
+        right: 1rem;
+        top: 1rem;
+        display: flex; /* habilitar as linhas do menu hamburquer*/
+        flex-direction: column; /*indica a direção das linhas do menu hamburquer*/
+        justify-content: space-evenly; /*separa as linhas do menu hamburquer de forma que fiquem com mesmo espaçamento*/
+        cursor: pointer;
+    }
+    
+    .show-menu .hamburguer{
+        right: 16rem;
+    }
+
+    .line{
+        width: 100%;
+        height: .1rem;
+        background-color: #fff;
+        box-shadow: 0.1rem 0.1rem black;
+        transition: transform .3s;
+    }
+
+    .show-menu #line1{
+        transform: rotate(45deg) translate(.1rem, .2rem); /*faz a rotação da linha e o posicionamento*/
+    }
+
+    .show-menu #line2{
+        opacity: 0;
+        visibility: hidden; /*visibilidade oculta*/
+    }
+
+    .show-menu #line3{
+        transform: rotate(-45deg) translate(.3rem, -.6rem);
+    }
+
+    .hamburguer span{
+        width: 6rem;
+        height: 1.5rem;
+        left: 2rem;
+        background-color: #a044ff;
+        color: #ffffff;
+        font-family: var(--font-action);
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;  
+        opacity: 0;    
+    }
+    
+    .hamburguer span::before{ /*inserido antes (before), contrução de um triangulo*/
+        content: "";
+        position: absolute;
+        border-right: .5rem solid #a044ff;
+        border-top: .5rem solid transparent;
+        border-left: .5rem solid transparent;
+        border-bottom: .5rem solid transparent;
+        left: -1rem;
+    }
+    
+    .show-menu .hamburguer:hover span{
+        opacity: 1;
+    }
+    
+    .img-wrapper{
+        width: 100%;
+        height: 85%;
+        overflow: hidden; /* remove qualquer posibilidade de barra de rolagem horizontal*/
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+    
+    .img-wrapper img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* a imagem ser ajustada em forma de corte*/
+        opacity: 0.7;
+        animation: zoom 25s; /*codigo insere a animação de zoom na imagem*/
+    }
+    
+    @keyframes zoom{ /*cria o movimento da imagem de zoom*/
+        0%{
+            transform: scale(1.3);
+        }
+        100%{
+            transform: scale(1.0);
+        }    
+    }
+
+    .banner{
+        position: absolute;
+        top: 5%;
+        left: 5%;
+    }
+
+    .banner h1{
+        color: #ffffff;
+        font-size: 2.3rem;
+        font-family: var(--font-primary);
+        font-weight: 200; /* peso da fonte */
+        text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.5);
+        margin-bottom: .5rem;
+        opacity: 0;
+        animation: moveBanner 1s 0.5s forwards;
+    }
+    
+    .banner p{
+        font-family: var(--font-secundary);
+        color: #fff;
+        font-size: 2rem;
+        text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
+        margin-bottom: 1rem;
+        opacity: 0;
+        animation: moveBanner 1s 0.7s forwards;
+    }
+            
+    @keyframes moveBanner{
+        0%{
+            transform: translateY(10rem) rotatey(-30deg);
+        }
+        100%{
+            transform: translatey(0) rotateY(0);
+            opacity: 1;
+        }
+    }
+
+    .sidebar{
+        width: 20rem;
+        height: 80vh;
+        background-color: #ffffff;
+        position: fixed;
+        top: 0;
+        right: 0; /*alinha a direita*/
+        right: -20rem;
+        z-index: 99;
+    }
+    
+    .show-menu .sidebar{
+        right: 0;
+    }
+    
+    .menu{
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .menu-item{
+        text-align: center;
+        margin-bottom: .2rem; /*espaçamento dos itens do menu*/
+    }
+
+    .menu-link{
+        font-family: var(--font-action);
+        font-size: 2rem;
+        color: #555;
+        transition: color 1s; /*coloca tempo na transição da cor do link*/
+    }
+    
+    .menu-link:hover{
+        color: #6a3093;
+    }
+    
+    .social-media{
+        position: absolute;
+        bottom: 3rem;
+        width: 100%;
+        display: flex; /*habilita as posições*/
+        justify-content: space-around; /*separa os icones de forma justificada e uniforme*/
+    }
+    
+    .social-media i{
+        background-color: #6a3093;
+        color: #ffffff;
+        height: 3rem;
+        width: 3rem;
+        font-size: 2.5rem; /*o icone tem tamanho de fonte neste caso por isso faz seu ajuste aqui*/
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        transition: background-color .5s;
+    }
+    
+    .social-media i:hover{
+        background-color: #a044ff;
+    }
+
+    .confirmacao-envio{
+        height: 60%;        
+    }
+
+    .confirmacao-envio-header{
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .confirmacao-envio-header h1{
+        font-family: var(--font-primary);
+        font-size: 1.7rem;
+        text-shadow: .1rem .1rem .2rem #0000008f;
+    }
+
+    .confirmacao-envio-header p {
+        font-family: var(--font-secundary);
+        font-size: 1.3rem;
+        padding-top: 1rem;
+    }
+
+    /*RODAPÉ*/
+
+    footer{
+        width: 100%;
+        height: 10rem;
+        background-color: #dadada;
+        display: flex;
+        justify-content: center;
+        align-items: center;        
+    }
+
+    .footer-logo{
+        width: 10rem;
+        padding-right: 1rem;
+        padding-left: 1rem;
+        position: relative;
+    }
+
+    .footer-logo img{
+        object-fit: cover;
+        width: 80%;
+        
+    }
+
+    .footer-content{
+        width: 100%;        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-copyright{
+        padding-left: 2rem;
+        padding-right: 2rem;
+        text-align: center;
+    }
+
+    .footer-copyright p{
+        font-family: var(--font-primary);
+        color: #000000;        
+        font-size: .9rem;
+    }
+
+    .footer-social{
+        height: 7rem;
+        display: flex;
+        align-items: center;
+    }
+
+    .footer-social a{
+        height: 100%;
+        margin: 0 2rem;
+        color: #000000;
+        font-size: 2rem;
+    }
+
+    .footer-social ul{
+        display: flex;
+    }
+
+    .footer-social a:hover{
+        color: #6a3093;
+    }
+
+    /*LINK TOPO*/    
+
+    #link-topo{
+        position: fixed;
+        padding: .3rem;
+        bottom: 1.5rem;        
+        right: 2rem;
+        background: #642B73;
+        background: -webkit-linear-gradient(to right, #C6426E, #642B73);
+        background: linear-gradient(to right, #C6426E, #642B73);
+        display: flex;
+        justify-content: center;        
+        color: white;
+        font-size: 2.5rem;
+        border-radius: .3rem;
+        box-shadow: 0 0.1rem 0.6rem #000000;
+        z-index: 101;
+        
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 700px) {
+
+    /*CABECALHO*/
+
+    body{
+        font-size: 16px;
+        overflow-x: hidden;
+    }
+
+    .container{
+        height: 100vh;
+        background-color: #f5f5f5;
+        position: relative;
+    }
+
+    header{
+        width: 100vh;
+        height: 12rem; /* dimensionar para que fique na altura da tela, independente do dispositivo*/
+        overflow: hidden;
+        position: relative; /* para se usar um baner na posição absoluta precisamos informar que o header e relativo*/
+    }
+
+    .hamburguer{
+        width: 1.5rem;
+        height: 1.5rem;
+        position: fixed;
+        z-index: 100; /* eixo x coloca o item a frente dos demais*/
+        right: 1rem;
+        top: 1rem;
+        display: flex; /* habilitar as linhas do menu hamburquer*/
+        flex-direction: column; /*indica a direção das linhas do menu hamburquer*/
+        justify-content: space-evenly; /*separa as linhas do menu hamburquer de forma que fiquem com mesmo espaçamento*/
+        cursor: pointer;
+    }
+    
+    .show-menu .hamburguer{
+        right: 11rem;
+    }
+
+    .line{
+        width: 100%;
+        height: .1rem;
+        background-color: #fff;
+        box-shadow: 0.1rem 0.1rem black;
+        transition: transform .3s;
+    }
+
+    .show-menu #line1{
+        transform: rotate(45deg) translate(.0rem, .2rem); /*faz a rotação da linha e o posicionamento*/
+    }
+
+    .show-menu #line2{
+        opacity: 0;
+        visibility: hidden; /*visibilidade oculta*/
+    }
+
+    .show-menu #line3{
+        transform: rotate(-45deg) translate(.1rem, -.65rem);
+    }
+
+    .hamburguer span{
+        width: 6rem;
+        height: 1.5rem;
+        left: 2rem;
+        background-color: #a044ff;
+        color: #ffffff;
+        font-family: var(--font-action);
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;  
+        opacity: 0;    
+    }
+    
+    .hamburguer span::before{ /*inserido antes (before), contrução de um triangulo*/
+        content: "";
+        position: absolute;
+        border-right: .5rem solid #a044ff;
+        border-top: .5rem solid transparent;
+        border-left: .5rem solid transparent;
+        border-bottom: .5rem solid transparent;
+        left: -1rem;
+    }
+    
+    .show-menu .hamburguer:hover span{
+        opacity: 1;
+    }
+    
+    .img-wrapper{
+        width: 100%;
+        height: 85%;
+        overflow: hidden; /* remove qualquer posibilidade de barra de rolagem horizontal*/
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+    
+    .img-wrapper img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* a imagem ser ajustada em forma de corte*/
+        opacity: 0.7;
+        animation: zoom 25s; /*codigo insere a animação de zoom na imagem*/
+    }
+    
+    @keyframes zoom{ /*cria o movimento da imagem de zoom*/
+        0%{
+            transform: scale(1.3);
+        }
+        100%{
+            transform: scale(1.0);
+        }    
+    }
+
+
+    .banner{
+        position: absolute;
+        top: 5%;
+        left: 5%;
+    
+    }
+
+    .banner h1{
+        color: #ffffff;
+        font-size: 2rem;
+        font-family: var(--font-primary);
+        font-weight: 200; /* peso da fonte */
+        text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.5);
+        margin-bottom: .5rem;
+        opacity: 0;
+        animation: moveBanner 1s 0.5s forwards;
+        
+    }
+    
+    .banner p{
+        font-family: var(--font-secundary);
+        color: #fff;
+        font-size: 1.5rem;
+        text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
+        margin-bottom: 1rem;
+        opacity: 0;
+        animation: moveBanner 1s 0.7s forwards;
+    }
+            
+    @keyframes moveBanner{
+        0%{
+            transform: translateY(10rem) rotatey(-30deg);
+        }
+        100%{
+            transform: translatey(0) rotateY(0);
+            opacity: 1;
+        }
+    }
+
+    .sidebar{
+        width: 14rem;
+        height: 70vh;
+        background-color: #ffffff;
+        position: fixed;
+        top: 0;
+        right: 0; /*alinha a direita*/
+        right: -14rem;
+        z-index: 99;
+    }
+    
+    .show-menu .sidebar{
+        right: 0;
+    }
+    
+    .menu{
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .menu-item{
+        text-align: center;
+        margin-bottom: .2rem; /*espaçamento dos itens do menu*/
+    }
+
+    .menu-link{
+        font-family: var(--font-action);
+        font-size: 1.6rem;
+        color: #555;
+        transition: color 1s; /*coloca tempo na transição da cor do link*/
+    }
+    
+    .menu-link:hover{
+        color: #6a3093;
+    
+    }
+    
+    .social-media{
+        position: absolute;
+        bottom: 2rem;
+        width: 100%;
+        display: flex; /*habilita as posições*/
+        justify-content: space-around; /*separa os icones de forma justificada e uniforme*/
+    }
+    
+    .social-media i{
+        background-color: #6a3093;
+        color: #ffffff;
+        height: 2rem;
+        width: 2rem;
+        font-size: 1.5rem; /*o icone tem tamanho de fonte neste caso por isso faz seu ajuste aqui*/
         display: flex;
         justify-content: center;
         align-items: center;
@@ -279,16 +911,17 @@ html{
     /*RODAPÉ*/
 
     footer{
-        width: 100%;
-        height: 12rem;
+        width: 100vh;
+        height: 8rem;
         background-color: #dadada;
         display: flex;
         justify-content: center;
-        align-items: center;        
+        align-items: center;
+        flex-direction: column;        
         }
 
     .footer-logo{
-        width: 12rem;
+        width: 7rem;
         padding-right: 1rem;
         padding-left: 1rem;
         position: relative;
@@ -347,26 +980,25 @@ html{
 
     /*LINK TOPO*/    
 
-    #link-topo{
-        position: fixed;
-        padding: .3rem;
-        bottom: 1.5rem;        
-        margin-left: 67rem;
-        background: #642B73;
-        background: -webkit-linear-gradient(to right, #C6426E, #642B73);
-        background: linear-gradient(to right, #C6426E, #642B73);
-        display: flex;
-        justify-content: center;        
-        color: white;
-        font-size: 2.5rem;
-        border-radius: .3rem;
-        box-shadow: 0 0.1rem 0.6rem #000000;
-        z-index: 101;
-        
-    }
-
-
-
+        #link-topo{
+            position: fixed;
+            padding: .3rem;
+            bottom: 1.5rem;        
+            right: 2rem;
+            background: #642B73;
+            background: -webkit-linear-gradient(to right, #C6426E, #642B73);
+            background: linear-gradient(to right, #C6426E, #642B73);
+            display: flex;
+            justify-content: center;        
+            color: white;
+            font-size: 2.5rem;
+            border-radius: .3rem;
+            box-shadow: 0 0.1rem 0.6rem #000000;
+            z-index: 101;
+            
+        }
 
 
 }
+
+    
